--- a/package.json
+++ b/package.json
@@ -1,24 +1,21 @@
 {
-  "name": "git-text",
+  "name": "confusion",
   "version": "1.0.0",
-  "description": "coursera course",
+  "description": "This is a website for Ristorante Con Fusion",
   "main": "index.html",
   "scripts": {
     "start": "npm run lite",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lite": "lite-server"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/KAYITARES/coursera_frontend.git"
-  },
-  "author": "KAYITARE Cynthia",
+  "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/KAYITARES/coursera_frontend/issues"
-  },
-  "homepage": "https://github.com/KAYITARES/coursera_frontend#readme",
   "devDependencies": {
-    "lite-server": "^2.6.1"
+    "lite-server": "^2.3.0"
+  },
+  "dependencies": {
+    "bootstrap": "^4.0.0",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.12.9"
   }
 }
